# rdfp_ws

./: .claudeignore  .cursorignore  .gitignore  CLAUDE.md  README.md  dataset_config.yaml
src/rdfp/: CLAUDE.md  README.md  package.xml  setup.cfg  setup.py
src/rdfp/config/: panda.rviz  rdfp_panda_mock.yaml
src/rdfp/launch/: README.md  camera_launch_helper.py  controller_launch_helper.py  controller_startup_launch_helper.py  ee_pose_launch_helper.py  gripper_launch_helper.py  launch_helper.py  moveit.launch.py  panda_mock.launch.py  rdfp.launch.py  rdfp_advanced.launch.py  rdfp_panda_mock.launch.py  replay_panda_mock.launch.py  ros2_control.launch.py  rviz2.launch.py
src/rdfp/rdfp/: __init__.py  logging_bridge.py  ros2_utils.py  types.py
src/rdfp/rdfp/camera/: camera_node.py  camera_utils.py  image_capture.py  image_viewer_node.py  opencv_camera.py  opencv_image_source.py  ros2_image_source.py
src/rdfp/rdfp/dataset/: cli_common.py  config.py  import_cmd.py  init_db_cmd.py  list_cmd.py  replay_cmd.py  replay_gui_cmd.py  stats_cmd.py  types.py
src/rdfp/rdfp/moveit/: __init__.py  ee_pose_publisher.py  gripper_command_subscriber.py  gripper_control_node.py  move_group_client.py  servo_client.py  target_joint_states_executor.py  target_joint_states_publisher.py  test_move_cartesian.py  utils.py
src/rdfp/rdfp/recorder/: README.md  __init__.py  encoder_probe.py  exceptions.py  ffmpeg_command.py  ffmpeg_mp4_recorder.py  image_recorder_node.py  rdfp_image_recorder_node.py  state.py
src/rdfp/rdfp/rosbag/: catalog.py  cli.py  mcap_reader.py  merged_stream.py
src/rdfp/rdfp/samples/: sample_camera_to_mp4.py  sample_ffmpeg_mp4_recorder.py  sample_mp4_image_replayer.py  sample_opencv_camera.py
src/rdfp/rdfp/session/: session_control_client.py  session_control_node.py
src/rdfp/scripts/: kill_topic_users.sh  rdfp_list_nodes.sh  rdfp_list_topics.sh  record_rosbag.sh  run_camera_node.sh  run_image_recorder_node.sh  run_image_viewer_node.sh  run_rdfp_camera_node.sh  run_rdfp_image_viewer_node.sh  run_session_node.sh  run_session_teleop.sh
src/rdfp_msgs/: CLAUDE.md  CMakeLists.txt  README.md  package.xml
src/rdfp_msgs/msg/: GripperCommand.msg  GripperState.msg  SessionCommand.msg  TargetJointStates.msg
src/rdfp_msgs/srv/: GetSessionState.srv  SetString.srv  StartSession.srv  StopSession.srv
(+112 files in other folders)
